# import-wasm-into-nextjs

./: README.md
nextjs-version/: next.config.js  package.json  webpack.config.js
nextjs-version/pages/: another_test.tsx  index.tsx  option_two.tsx
nextjs-version/public/js/: gameplay.d.ts  gameplay.js  gameplay.wasm
react-version/src/: App.tsx  index.tsx
react-version/src/js/: gameplay.d.ts  gameplay.wasm
rust-wasm/: Cargo.toml  Makefile
rust-wasm-game/: Cargo.toml  Makefile
rust-wasm-game/src/: common.rs  game.rs  lcg_rand_gen.rs  lib.rs  player.rs  server.rs  vec2.rs
rust-wasm/src/: lib.rs
