[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "game"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]


[[bin]]
name = "test"
path = "bin/test.rs"


[dependencies]
wasm-bindgen = "0.2.83"
zkwasm-rust-sdk = { git = "https://github.com/DelphinusLab/zkWasm-rust", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"


